--- a/binaries/Simbuino4Web/Views/Home/Index.cshtml
+++ b/binaries/Simbuino4Web/Views/Home/Index.cshtml
@@ -14,6 +14,8 @@
 		  <tr>
 			  <td style="width:315px">
 				  <button id="reset">Reset</button>
+				  <button id="loader">Loader</button>
+				  @*<button id="bootloader">Bootloader</button>*@
 			  </td>
 			  <td style="width:315px">
 				  <div id="fps" align="right">0 fps</div>
@@ -26,9 +28,9 @@
 
 <div class="outer">
   <div class="inner">
-	  Select a .HEX file: 
-	  <input type="file" id="fileInput">
-	  <div>Remember to always click on the game panel after a load or reset to start playing.</div>
+	  <div>Load a .HEX game file: <input type="file" id="hexInput"></div>
+	  <div>SD Card .IMG file: <input type="file" id="imgInput"></div>
+	  <div>Click on the game panel if the controls become unresponsive.</div>
 	  <div>Key Mappings: ESDF=arrows, K=A button, L=B button, R=C button</div>
 	  <div id="error"></div>
   </div>
@@ -37,10 +39,9 @@
 
 @section scripts {
 
-	@Url.Script("/Scripts/knockout-2.2.0.js")
 	@Url.Script("/Scripts/Views/class.js")	
 
-	<!-- Oh look, I've added my Arduino emulator code as-is, comments and all. Aren't you lucky? ;) -->
+	<!-- Oh look, I've added my Arduino emulator code as-is, comments and all. Aren't you lucky? ;) -->	
 	@Url.Script("/Scripts/Views/MemoryMappedRegister.js")
 	@Url.Script("/Scripts/Views/AtmelRegisters.js")
 	@Url.Script("/Scripts/Views/FlagsRegister.js")
@@ -54,7 +55,10 @@
 	@Url.Script("/Scripts/Views/USART.js")
 	@Url.Script("/Scripts/Views/EEPROM.js")
 	@Url.Script("/Scripts/Views/Lcd.js")
+	@Url.Script("/Scripts/Views/SdDevice.js")
 	@Url.Script("/Scripts/Views/AudioPlayer.js")
 	@Url.Script("/Scripts/Views/HexDecoder.js")
+	@Url.Script("/Scripts/Views/Bootloader.js")
+	@Url.Script("/Scripts/Views/Loader.js")
 	@Url.Script("/Scripts/Views/Simulation.js")
 }
